<resources>
    <string name="app_name">SimpleAndroidApp</string>
    <string name="hint_login_ID">Please input your ID</string>
    <string name="hint_login_password">Please input your password</string>
    <string name="txt_login">Login</string>
    <string name="btn_button">Login Button</string>
    <string name="btn_join">Join Button</string>
    <string name="hint_join_ID">Type your ID</string>
    <string name="btn_button_check">Check Button</string>
    <string name="hint_join_password">Type your password</string>
    <string name="hint_check_password">Re-type your password</string>
    <string name="hint_join_email">Type your email</string>
    <string name="btn_button_join">Join Button</string>
    <string name="btn_button_back">Back Button</string>
    <string name="hint_join_birthday">Choose your birthday</string>
</resources>