<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding"
    tools:context=".JoinPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edt_join_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/hint_join_ID" />

            <TextView
                android:id="@+id/txt_check_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_check_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:text="@string/btn_button_check"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edt_join_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/hint_join_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_check_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/hint_check_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_join_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/hint_join_email" />

            <EditText
                android:id="@+id/edt_join_birthday"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/hint_join_birthday" />

            <Button
                android:id="@+id/btn_join_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:text="@string/btn_button_join"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:text="@string/btn_button_back"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>